# copy-file-stats

./: .travis.yml  AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  CMakeLists.txt  FileUtilities.cpp  FileUtilities.h  README  README.md  SaveRestore.cpp  SaveRestore.hpp  copy-file-stats.cbp  main.cpp
.github/workflows/: clang.yml  gcc.yml
copy-file-stats/: CMakeLists.txt  FileUtilities.cpp  FileUtilities.h  copy-file-stats.cbp  main.cpp
program/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  CMakeLists.txt  FileUtilities.cpp  FileUtilities.hpp  ModeUtility.cpp  ModeUtility.hpp  SaveRestore.cpp  SaveRestore.hpp  copy-file-stats.cbp  main.cpp
tests/: CMakeLists.txt
tests/SaveRestore/: CMakeLists.txt  mode_test.cbp  mode_test.cpp  string_to_mode.cbp  string_to_mode.cpp
tests/SaveRestore/restore/: stat_file_test.cpp  stat_file_test.sh  stat_file_test_with_slash.sh
tests/SaveRestore/save/: stat_file_test.cbp  stat_file_test.cpp  stat_file_test.sh  stat_file_test_with_slash.sh  statfile.tpl
tests/SaveRestore/statFile/: stat_file_test.cpp  stat_file_test.sh  statfile.tpl
tests/SaveRestore/stringToMode/: string_to_mode.cbp  string_to_mode.cpp
tests/copy-file-stats/: CMakeLists.txt
tests/copy-file-stats/directory_to_directory/: source_to_destination.sh  source_to_destination_slash01.sh  source_to_destination_slash10.sh  source_to_destination_slash11.sh
tests/copy-file-stats/restore/: restore_chmod.sh  restore_chmod_slash.sh
tests/copy-file-stats/save/: save.sh  save_with_slash.sh
tests/script-includes/: creation.sh
tests/script-sanity/: CMakeLists.txt  bashlint.sh
