# Recurse into subdirectory for tests of class SaveRestore.
add_subdirectory (SaveRestore)

# Recurse into subdirectory for tests with copy-file-stats binary.
add_subdirectory (copy-file-stats)

# Recurse into subdirectory for tests that test the test scripts for correct
# syntax.
add_subdirectory (script-sanity)
